tests/fixtures/fail/use-nested-violation/components/button.vue
<!-- Should be Button.vue (PascalCase) -->
